fixed home font + button size and header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@
 
 * {
     font-family: 'Satoshi', sans-serif;
-    --rosa: rgb(192, 160, 189);
     color: rgb(255, 228, 253);
+    --rosa: rgb(255, 228, 253);
 }
 
 #oneko {
@@ -42,8 +42,8 @@ header {
 
 header a {
     text-decoration: none;
-    margin-right: 7px;
-    margin-left: 7px;
+    margin-right: 8px;
+    margin-left: 8px;
     font-weight: 600;
     letter-spacing: .5px;
     font-size: 22px;
@@ -57,7 +57,6 @@ header a {
     padding-left: 10px;
     padding-right: 10px;
     margin: 0 10px;
-    color: var(--rosa);
     background-color: rgba(255, 255, 255, 0.2);
     border: none;
     border-radius: 20px;
@@ -67,7 +66,7 @@ header a {
     border: none;
     box-shadow: 0 0 10px 3px rgba(255, 255, 255, 0.3);
     letter-spacing: 1px;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 650;
 }
 
@@ -76,7 +75,7 @@ header a {
 }
 
 .intro {
-    max-width: 35em;
+    max-width: 37em;
 }
 
 h1 {
@@ -85,6 +84,6 @@ h1 {
 
 p {
     font-weight: 500;
-    font-size: 1.1em;
+    font-size: 1.15em;
     margin: 15px;
 }
